  * fix for #94 (not sure if it covers all cases.)
  * working on #101 moving symlinks results in file, instead of link (only with relpathPost set.)
  * realpath_filter defaults to true now.
  * mv symlink -> compound fileOp: { "rename":"toto", "link": "target" }, 
  * dup memory added, so duped files are closed once.
  * removed support for from_cluster, to_clusters

 -- Peter Silva <peter@bsqt.homeip.net>  Mon, 19 Dec 2022 22:44:00 -0500

metpx-sr3c (3.22.12p1) unstable; urgency=medium

  * backported overlooked patch from v2 for SSL errors on redhat 8
  * fix coredump on specification of unknown checksum algorithm
  * README updated (was unchanged from v2.)

 -- Peter Silva <peter@bsqt.homeip.net>  Tue, 06 Dec 2022 13:18:37 -0500

metpx-sr3c (3.22.12) unstable; urgency=medium

  * removed some debug prints
  * fix: #68 wgrib2 will not post (via libsrshim.) (regression in 3.22.07 now fixed.)
  * now only post once for rename case. add v2compatRenameDoublePost support

 -- Peter Silva <peter@bsqt.homeip.net>  Fri, 02 Dec 2022 15:17:53 -0500

metpx-sr3c (3.22.11) unstable; urgency=medium

  * fix for #103

 -- Peter Silva <peter@bsqt.homeip.net>  Thu, 17 Nov 2022 19:28:34 -0500

metpx-sr3c (3.22.09p2) unstable; urgency=medium

  * changed v03 format (for symlinks, rename, remove cases.)
  * #85 fix for infinite loop on_exit.
  * debug messages include pid and wall-clock time offset from start in seconds.
  * packaging improvements (separate devel package) 
  * fixes for #100, and #101 HPC mirroring symlink processing.

 -- Peter Silva <peter@bsqt.homeip.net>  Wed, 21 Sep 2022 14:32:10 -0400

sr3c (3.22.07) unstable; urgency=medium

  * added outlet support for v03 format.
  * fix for shim library looping forever when too many exit hooks present.
  * refactored/refined debug printing.
  * added outlet v03 format support. 
  * rpath to ../lib fixing search for dyn libraries.
  * ensur libsarra.so.1 is installed.